--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /aula03/nbproject/private/
 /aula04/nbproject/private/
 /aula05/nbproject/private/
+/aula06/nbproject/private/
+/ProjetoFinal/nbproject/private/
